feat: add redis
