# server/docs/swagger.yaml
@@ -1,28 +1,11 @@
 consumes:
 - application/json
 definitions:
-  config.Version:
-    properties:
-      buildDate:
-        type: string
-      compiler:
-        type: string
-      gitCommit:
-        type: string
-      gitTreeState:
-        type: string
-      gitVersion:
-        type: string
-      goVersion:
-        type: string
-      platform:
-        type: string
-    type: object
-  router.ChatCompletionChoice:
+  api.ChatCompletionChoice:
     properties:
       delta:
         allOf:
-        - $ref: '#/definitions/router.ChatCompletionMessage'
+        - $ref: '#/definitions/api.ChatCompletionMessage'
         description: 模型输出的增量内容（流式）
       finish_reason:
         description: 模型停止输出原因
@@ -32,10 +15,10 @@ definitions:
         type: integer
       message:
         allOf:
-        - $ref: '#/definitions/router.ChatCompletionMessage'
+        - $ref: '#/definitions/api.ChatCompletionMessage'
         description: 模型输出消息列表（非流式）
     type: object
-  router.ChatCompletionMessage:
+  api.ChatCompletionMessage:
     properties:
       content:
         description: 内容
@@ -47,12 +30,12 @@ definitions:
         description: 角色
         type: string
     type: object
-  router.ChatCompletionReq:
+  api.ChatCompletionReq:
     properties:
       messages:
         description: 消息列表
         items:
-          $ref: '#/definitions/router.ChatCompletionMessage'
+          $ref: '#/definitions/api.ChatCompletionMessage'
         type: array
       model:
         description: 模型 Id
@@ -61,12 +44,12 @@ definitions:
         description: 是否流式
         type: boolean
     type: object
-  router.ChatCompletionResp:
+  api.ChatCompletionResp:
     properties:
       choices:
         description: 模型输出内容
         items:
-          $ref: '#/definitions/router.ChatCompletionChoice'
+          $ref: '#/definitions/api.ChatCompletionChoice'
         type: array
       created:
         description: 请求创建的时间戳（秒级）
@@ -82,10 +65,10 @@ definitions:
         type: string
       usage:
         allOf:
-        - $ref: '#/definitions/router.ChatCompletionUsage'
+        - $ref: '#/definitions/api.ChatCompletionUsage'
         description: 用量
     type: object
-  router.ChatCompletionUsage:
+  api.ChatCompletionUsage:
     properties:
       completion_tokens:
         description: 输出 tokens
@@ -97,18 +80,27 @@ definitions:
         description: 总消耗 tokens
         type: integer
     type: object
-  router.ListModelResp:
+  api.Index:
+    properties:
+      app_name:
+        type: string
+      build_date:
+        type: string
+      git_version:
+        type: string
+    type: object
+  api.ListModelResp:
     properties:
       data:
         description: 模型列表
         items:
-          $ref: '#/definitions/router.Model'
+          $ref: '#/definitions/api.Model'
         type: array
       object:
         description: 固定为 list
         type: string
     type: object
-  router.Model:
+  api.Model:
     properties:
       created:
         type: integer
@@ -130,29 +122,14 @@ info:
   title: AIChat Proxy API
   version: "1.0"
 paths:
-  /_sse.js:
+  /:
     get:
-      deprecated: true
-      produces:
-      - text/plain
       responses:
         "200":
           description: OK
           schema:
-            type: string
-      summary: TamperMonkey SSE Script File
-      tags:
-      - file
-  /health:
-    get:
-      produces:
-      - text/plain
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-      summary: Health Check
+            $ref: '#/definitions/api.Index'
+      summary: Index
       tags:
       - common
   /v1/chat/completions:
@@ -164,7 +141,7 @@ paths:
         name: '*'
         required: true
         schema:
-          $ref: '#/definitions/router.ChatCompletionReq'
+          $ref: '#/definitions/api.ChatCompletionReq'
       produces:
       - application/json
       - text/event-stream
@@ -172,7 +149,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/router.ChatCompletionResp'
+            $ref: '#/definitions/api.ChatCompletionResp'
       security:
       - ApiKeyAuth: []
       summary: Chat Completions
@@ -181,28 +158,16 @@ paths:
   /v1/models:
     get:
       description: Follows the exact same API spec as `https://platform.openai.com/docs/api-reference/models/list`
-      produces:
-      - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/router.ListModelResp'
+            $ref: '#/definitions/api.ListModelResp'
       security:
       - ApiKeyAuth: []
       summary: Model List
       tags:
       - model
-  /version:
-    get:
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/config.Version'
-      summary: Show Version
-      tags:
-      - common
 produces:
 - application/json
 schemes:
@@ -215,6 +180,5 @@ securityDefinitions:
 swagger: "2.0"
 tags:
 - name: common
-- name: file
 - name: model
 - name: chat
